apps/media-server/overlays/tombstone/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: lidarr
  name: lidarr
spec:
  hostnames:
    - lidarr.home.arpa
  parentRefs:
    - kind: Gateway
      name: ingress
      namespace: istio-gateways
  rules:
    - backendRefs:
        - name: lidarr
          port: 8686
      filters:
        - responseHeaderModifier:
            set:
              - name: Permissions-Policy
                value: geolocation=(), microphone=(), camera=()
              - name: Referrer-Policy
                value: strict-origin-when-cross-origin
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-Frame-Options
                value: DENY
              - name: X-Robots-Tag
                value: noindex, nofollow
              - name: X-XSS-Protection
                value: 1; mode=block
          type: ResponseHeaderModifier
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: nzbget
  name: nzbget
spec:
  hostnames:
    - nzbget.home.arpa
  parentRefs:
    - kind: Gateway
      name: ingress
      namespace: istio-gateways
  rules:
    - backendRefs:
        - name: nzbget
          port: 6789
      filters:
        - responseHeaderModifier:
            set:
              - name: Permissions-Policy
                value: geolocation=(), microphone=(), camera=()
              - name: Referrer-Policy
                value: strict-origin-when-cross-origin
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-Frame-Options
                value: DENY
              - name: X-Robots-Tag
                value: noindex, nofollow
              - name: X-XSS-Protection
                value: 1; mode=block
          type: ResponseHeaderModifier
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: ombi
  name: ombi
spec:
  hostnames:
    - ombi.home.arpa
  parentRefs:
    - kind: Gateway
      name: ingress
      namespace: istio-gateways
  rules:
    - backendRefs:
        - name: ombi
          port: 5000
      filters:
        - responseHeaderModifier:
            set:
              - name: Permissions-Policy
                value: geolocation=(), microphone=(), camera=()
              - name: Referrer-Policy
                value: strict-origin-when-cross-origin
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-Frame-Options
                value: DENY
              - name: X-Robots-Tag
                value: noindex, nofollow
              - name: X-XSS-Protection
                value: 1; mode=block
          type: ResponseHeaderModifier
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: prowlarr
  name: prowlarr
spec:
  hostnames:
    - prowlarr.home.arpa
  parentRefs:
    - kind: Gateway
      name: ingress
      namespace: istio-gateways
  rules:
    - backendRefs:
        - name: prowlarr
          port: 9696
      filters:
        - responseHeaderModifier:
            set:
              - name: Permissions-Policy
                value: geolocation=(), microphone=(), camera=()
              - name: Referrer-Policy
                value: strict-origin-when-cross-origin
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-Frame-Options
                value: DENY
              - name: X-Robots-Tag
                value: noindex, nofollow
              - name: X-XSS-Protection
                value: 1; mode=block
          type: ResponseHeaderModifier
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: radarr
  name: radarr
spec:
  hostnames:
    - radarr.home.arpa
  parentRefs:
    - kind: Gateway
      name: ingress
      namespace: istio-gateways
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
      filters:
        - responseHeaderModifier:
            set:
              - name: Permissions-Policy
                value: geolocation=(), microphone=(), camera=()
              - name: Referrer-Policy
                value: strict-origin-when-cross-origin
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-Frame-Options
                value: DENY
              - name: X-Robots-Tag
                value: noindex, nofollow
              - name: X-XSS-Protection
                value: 1; mode=block
          type: ResponseHeaderModifier
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: sonarr
  name: sonarr
spec:
  hostnames:
    - sonarr.home.arpa
  parentRefs:
    - kind: Gateway
      name: ingress
      namespace: istio-gateways
  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
      filters:
        - responseHeaderModifier:
            set:
              - name: Permissions-Policy
                value: geolocation=(), microphone=(), camera=()
              - name: Referrer-Policy
                value: strict-origin-when-cross-origin
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-Frame-Options
                value: DENY
              - name: X-Robots-Tag
                value: noindex, nofollow
              - name: X-XSS-Protection
                value: 1; mode=block
          type: ResponseHeaderModifier
