apps/media-server/overlays/tombstone/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ownca
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd,traefik-ip-allowlist-internal@kubernetescrd
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: lidarr
  name: lidarr
spec:
  ingressClassName: traefik
  rules:
    - host: lidarr.home.arpa
      http:
        paths:
          - backend:
              service:
                name: lidarr
                port:
                  number: 8686
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - lidarr.home.arpa
      secretName: lidarr-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ownca
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd,traefik-ip-allowlist-internal@kubernetescrd
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: nzbget
  name: nzbget
spec:
  ingressClassName: traefik
  rules:
    - host: nzbget.home.arpa
      http:
        paths:
          - backend:
              service:
                name: nzbget
                port:
                  number: 6789
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nzbget.home.arpa
      secretName: nzbget-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ownca
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd,traefik-ip-allowlist-internal@kubernetescrd
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: ombi
  name: ombi
spec:
  ingressClassName: traefik
  rules:
    - host: ombi.home.arpa
      http:
        paths:
          - backend:
              service:
                name: ombi
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ombi.home.arpa
      secretName: ombi-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ownca
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd,traefik-ip-allowlist-internal@kubernetescrd
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: prowlarr
  name: prowlarr
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.home.arpa
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  number: 9696
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prowlarr.home.arpa
      secretName: prowlarr-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ownca
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd,traefik-ip-allowlist-internal@kubernetescrd
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: radarr
  name: radarr
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.home.arpa
      http:
        paths:
          - backend:
              service:
                name: radarr
                port:
                  number: 7878
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - radarr.home.arpa
      secretName: radarr-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ownca
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd,traefik-ip-allowlist-internal@kubernetescrd
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: sonarr
  name: sonarr
spec:
  ingressClassName: traefik
  rules:
    - host: sonarr.home.arpa
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  number: 8989
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sonarr.home.arpa
      secretName: sonarr-tls
